# cvnet

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cvnet/: CMakeLists.txt  cva2sm.cpp  cva2sm.h  cvarray.cpp  cvarray.h  cvmeth.cpp  cvmeth.h  cvnet.cpp  cvnet.h  dump.cpp  edgeMeth.cpp  edgeMeth.h  edges.cpp  fileOption.cpp  fileOption.h  filename.cpp  filename.h  g2cva.cpp  g2cva.h  karray.cpp  karray.h  kstring.cpp  kstring.h  mclmatrix.cpp  mclmatrix.h  readgenome.h  similarMatrix.cpp  similarMatrix.h  similarMeth.cpp  similarMeth.h  sm2mcl.cpp  sm2mcl.h
cvog/: CMakeLists.txt  cva2dm.cpp  cva2dm.h  cvarray.cpp  cvarray.h  cvbrick.cpp  cvbrick.h  cvcache.cpp  cvcache.h  cvmeth.cpp  cvmeth.h  dbquery.cpp  distmatrix.cpp  distmatrix.h  distmeth4cva.cpp  dm2mcl.cpp  dm2mcl.hpp  g2cva.cpp  g2cva.h  kstring.cpp  kstring.h  mclmatrix.cpp  mclmatrix.hpp
example/: list
example/edge/: GeneIndex.tsv
example/faa/: GCA_030012765.1.faa  GCA_030036875.1.faa  GCA_030169635.1.faa  GCA_030389715.1.faa  GCA_030413745.1.faa  GCA_030515355.1.faa  GCA_030515435.1.faa  GCA_030707875.1.faa  GCA_030708375.1.faa  GCA_030995245.1.faa  GCA_031786515.1.faa  GCA_032055125.1.faa  GCA_032295845.1.faa  GCA_035609265.1.faa  GCA_035621595.1.faa
kit/: CMakeLists.txt  fileOpt.cpp  kit.h  stringOpt.cpp
retrieve/: orthoFinderTools.py  orthoRetrieve.py  orthofinder.ipynb
scripts/: Dockerfile  clusterAnalysis.ipynb  cvnet.def  networkAnalysis.ipynb  orthoRetrieve.py  orthofinder.ipynb  runMCL.py  runMCL.sh  scFasta.py  statCluster.py  statNetwork.py  toolkit.py
src/cvnet/: CMakeLists.txt  cvmeth.cpp  cvmeth.h  cvnet.cpp  edgeMeth.cpp  edges.h  fileOption.cpp  karray.h  mclmatrix.cpp  mclmatrix.h  readgenome.cpp  similarMatrix.h  similarMeth.cpp
src/kit/: stringOpt.cpp  stringOpt.h
